--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "dotenv": "^16.4.5",
     "express": "^4.20.0",
     "express-graphql": "^0.12.0",
-    "graphql": "^15.9.0"
+    "graphql": "^15.9.0",
+    "ngrok": "^5.0.0-beta.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
